Create new package 'tips'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".MessageActivity">
         </activity>
 
-        <activity android:name=".TipsActivity">
+        <activity android:name=".tips.TipsActivity">
         </activity>
 
     </application>
