--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StormHacks2021">
-        <activity android:name=".NewUserActivity"></activity>
+        <activity android:name=".MessageUserActivity"></activity>
+        <activity android:name=".NewUserActivity" />
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapActivity"></activity>
-        <activity android:name=".MessageActivity"></activity>
-        <activity android:name=".TipsActivity"></activity>
+        <activity android:name=".MapActivity" />
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".TipsActivity" />
     </application>
 
 </manifest>
